--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
         <module>provider</module>
         <module>interface</module>
         <module>consumer</module>
+        <module>provider2</module>
     </modules>
 
 
